--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -9,27 +9,26 @@
 <hr>
 <br>
 
-<p>
-  Title:
+<div style="color:orange">
   <%= @list.title %>
-</p>
-
-<p>
-  Description:
+  <br>
   <%= @list.description %>
-</p>
+</div>
+<br>
 
 <p>
   Items on List:
 <div class ="items">
 
-    <% @list.list_items.each do |i| %>&nbsp;&nbsp;
-    <%= check_box_tag 'check'%>&nbsp;&nbsp;
-    <%= i.name %><br>
-    <% end %>
+<!--     <%# @list.list_items.each do |i| %>&nbsp;&nbsp;
+    <%#= check_box_tag 'check'%>&nbsp;&nbsp;
+    <%#= i.name %><br>
+    <%# end %> -->
 </div>
 </p>
 <br>
 <br>
-<%= link_to 'Edit', edit_list_path(@list) %> |
-<%= link_to 'Back', lists_path %>
+<%= link_to 'Edit List', edit_list_path(@list) %>
+<br>
+<br>
+<%= link_to 'Back to All lists', list_types_path %><br>
