added some styles

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -14,12 +14,12 @@ body {
   color:grey;
 }
 
-p, ol, ul, td {
+p,td {
   font-family: 'Roboto', helvetica, sans-serif;
   font-size: 15px;
   line-height: 18px;
-  color: grey;
-  text-shadow: 2px 2px 2px lightgrey;
+  color: green;
+  
 }
 
 pre {
