--- a/app/views/list_types/show.html.erb
+++ b/app/views/list_types/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 
-  <center><h3> <%= @list_type.category %></h3></center>
+  <center><h3> <%= @list_type.category.upcase %></h3></center>
 
 <br>
 
