--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,13 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<div class="container">
+
+  <div class="jumbotron">
+    <h3 class="display-4"> About Friendly Task</h3>
+    <br>
+    <center><p class="lead">Welcome to Friendly Task,  You've got lists and projects to create and organize!</p></center>
+    <hr class="my-4">
+
+      <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+    </p>
+  </div>
+
+</div>
