--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -1,24 +1,57 @@
-<center>
-  <div class='nav'>
-      <%= link_to 'Home', pages_home_path %> &nbsp;&nbsp;&nbsp;&nbsp;
-      <%= link_to 'Your Dashboard', pages_dashboard_path %> &nbsp;&nbsp;&nbsp;&nbsp;
-      <%= link_to 'Settings', pages_settings_path%> &nbsp;&nbsp;&nbsp;&nbsp;
-      <%= link_to 'About', pages_about_path%> &nbsp;&nbsp;&nbsp;&nbsp;
-      <%#= link_to 'My Lists', lists_path%> <!-- &nbsp;&nbsp;&nbsp;&nbsp; -->
-      <%= link_to 'My Lists', list_types_path%> &nbsp;&nbsp;&nbsp;&nbsp;
-      
-      <%= link_to 'Team Tasks',  teams_path%> &nbsp;&nbsp;&nbsp;&nbsp;
-      <%= link_to 'Chores',  chores_path%> &nbsp;&nbsp;&nbsp; |   &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-      <ul class ="nav navbar-nav">
-        
-        <% if current_user.present? %>
-          <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
-      <% else %>
-      <%= link_to "Log In", new_user_session_path %>  |  <%= link_to 'Sign Up', new_user_registration_path %>
-      <%end%>
-    </ul>
+  <nav class="navbar navbar-expand-md navbar-dark bg-primary">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsingNavbar">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+      <div class="navbar-collapse collapse" id="collapsingNavbar">
+        <ul class="navbar-nav">
+              &nbsp;&nbsp;&nbsp;&nbsp;
+
+            <li class="nav-item active">
+              <%= link_to 'Home', pages_home_path %> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            </li>
+
+            <li class="nav-item">
+              <%= link_to 'Your Dashboard', pages_dashboard_path %> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            </li>
+                
+
+              <li class="nav-item">
+              <%= link_to 'Settings', pages_settings_path%> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            </li>
+
+              <li class="nav-item">
+              <%= link_to 'About', pages_about_path%> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            </li>
+
+              <li class="nav-item">
+              <%#= link_to 'My Lists', lists_path%> <!-- &nbsp;&nbsp;&nbsp;&nbsp; -->
+              <%= link_to 'My Lists', list_types_path%> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            </li>
+
+              <li class="nav-item">
+              <%= link_to 'Team Tasks',  teams_path%> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            </li>
+
+              <li class="nav-item">
+              <%= link_to 'Chores',  chores_path%> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;; 
+            </li>
+      
+        </ul>
+
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="" data-target="#myModal" data-toggle="modal"></a>
+                <% if current_user.present? %>
+                <%= link_to "Log Out", destroy_user_session_path, method: :delete %>
+                <% else %>
+                <%= link_to "Log In", new_user_session_path %>  |  <%= link_to 'Sign Up', new_user_registration_path %>
+                <%end%>
+            </li>
+            &nbsp;&nbsp;&nbsp;&nbsp;
+        </ul>
+
+  <br>
+  <br>
   </div>
-</center>
-  <br>
-  <br>
+</nav>
