--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -18,7 +18,7 @@ p,td {
   font-family: 'Roboto', helvetica, sans-serif;
   font-size: 15px;
   line-height: 18px;
-  color: green;
+  color: #124360;
   
 }
 
@@ -107,7 +107,7 @@ label {
     height: auto;
     margin: 5px;
     border: 2px solid grey; 
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', helvetica, sans-serif;
     padding:8px;
     box-shadow: 2px 3px 8px #888888;
     border-radius: 7px;
@@ -140,7 +140,7 @@ box-shadow: 2px 3px 8px orange;
     height: auto;
     margin: 10px;
     border: 2px solid grey; 
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', helvetica, sans-serif;
     font-size: 11pt;
     padding:0.25em;
     box-shadow: 1px 3px 8px #888888;
@@ -162,7 +162,7 @@ box-shadow: 2px 3px 8px orange;
 }
 
 .card-header{
-  font-family: Roboto;
+  font-family: 'Roboto', helvetica, sans-serif;
   background-color: orange;
   color:white;
   font-size: 16px;
