--- a/app/views/list_types/index.html.erb
+++ b/app/views/list_types/index.html.erb
@@ -8,8 +8,8 @@
 <br>
 
 
-    <p> STEP 1: Click "Create a New Category" to create the categories that fit your life ie; groceries, school, packing, home projects, etc</p>
-    <p> STEP 2:  Click on "Create a New List" and organize that list into one of the customs categories you just created</p>
+    <p> STEP 1: Click "Create a New Category" to create the categories that fit your life ie; groceries, school, packing, home projects, etc.</p>
+    <p> STEP 2:  Click on "Create a New List" and organize that list into one of the customs categories you just created.</p>
    
 
 
@@ -34,9 +34,10 @@
 </center>
 <hr>
 <br>
+
 <div class="space-index">
-<div class="d-flex justify-content-around">
-<div class= 'row justify-content-center"'>
+<div class="d-flex justify-content-center">
+<div class= 'row center'>
    
     <% @list_types.each do |list_type| %>
  
@@ -64,7 +65,7 @@
     <% end %>
 </div>
 </div>
-</center>
+
 <br>
 <br>
 
