--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -53,7 +53,7 @@
 &nbsp;&nbsp;&nbsp;
 
 <%= link_to  edit_list_path(@list) do %>
-  <%= fa_icon 'fab edit fa-7x'%>&nbsp; Edit item on List
+  <%= fa_icon 'fab edit fa-7x'%>&nbsp; Click to Edit items
     <%end%>
 <hr>
 
