--- a/app/views/list_types/_form.html.erb
+++ b/app/views/list_types/_form.html.erb
@@ -1,22 +1,21 @@
 <%= form_with(model: list_type, local: true) do |form| %>
-  <% if list_type.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(list_type.errors.count, "error") %> prohibited this list_type from being saved:</h2>
+   <% if list_type.errors.any? %>
 
-      <ul>
-      <% list_type.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+      <% list_type.errors.full_messages.each do |error| %>
+     <%= js add_gritter(error, :image=> :error, title: "FRIENDLY TASK", sticky: false, time: 3500) %>
       <% end %>
-      </ul>
-    </div>
+
   <% end %>
 
   <div class="field">
-    <%= form.label :category %>
+    <%= form.label :category, "Category New" %>
     <%= form.text_field :category, id: :list_type_category %>
   </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+<br>
+ <hr>
+       <button type="button" class= 'btn btn-success'> 
+   <%= form.submit  "Creat Category" , :class =>'btn btn-success'%>
+   </button>
 <% end %>
+<br>
+<br>
